# fhir-lsp

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: fhir_r4.json  fhir_r4b.json  fhir_r5.json
scripts/: compress_assets.sh  extract_fhir_definitions.py
src/: ast.rs  definitions.rs  diagnostics.rs  fhir_index.rs  formatter.rs  main.rs
tree-sitter-fhir-json/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-fhir-json/bindings/c/: tree-sitter-fhir_json.pc.in
tree-sitter-fhir-json/bindings/go/: binding.go  binding_test.go
tree-sitter-fhir-json/bindings/node/: binding.cc  index.js
tree-sitter-fhir-json/bindings/python/tests/: test_binding.py
tree-sitter-fhir-json/bindings/python/tree_sitter_fhir_json/: __init__.py  binding.c
tree-sitter-fhir-json/bindings/rust/: build.rs  lib.rs
tree-sitter-fhir-json/bindings/swift/TreeSitterFhirJson/: fhir_json.h
tree-sitter-fhir-json/bindings/swift/TreeSitterFhirJsonTests/: TreeSitterFhirJsonTests.swift
tree-sitter-fhir-json/src/: grammar.json  node-types.json  parser.c
tree-sitter-fhir-json/test_files/: test.json
