[package]
name = "fhir-lsp"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc="*"

[dependencies]
tree-sitter = "0.25.2"
tower-lsp = "0.20.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing-subscriber = "0.3.19"

[[bin]]
name = "server"
path = "src/server.rs"
