[package]
name = "fhir-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.26.8"
tree-sitter-fhir-json = { path = "tree-sitter-fhir-json" }
tower-lsp-server = "0.23.0"
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tracing-subscriber = "0.3.23"
zstd = "0.13"
